--- a/package.json
+++ b/package.json
@@ -15,12 +15,8 @@
   },
   "dependencies": {
     "gatsby": "^2.26.1",
-    "gatsby-plugin-typography": "^2.11.0",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-typography": "^0.16.19",
-    "typography": "^0.16.19",
-    "typography-theme-fairy-gates": "^0.16.19"
+    "react-dom": "^16.12.0"
   },
   "devDependencies": {
     "prettier": "2.2.1"
